base produccion updated

--- a/angular.json
+++ b/angular.json
@@ -43,6 +43,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "https://github.com/Refreije/angular-primeros-pasos",
               "budgets": [
                 {
                   "type": "initial",
